# zkv

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/network/: mod.rs
conf/: server.conf
protocol/: Cargo.toml  build.rs
protocol/proto/: commands.proto
protocol/src/: error.rs  lib.rs
protocol/src/network/: frame.rs
protocol/src/pb/: commands.rs  mod.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs
server/src/network/: mod.rs
server/src/service/: command_service.rs  mod.rs
server/src/storage/: memory.rs  mod.rs  sleddb.rs
