[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
tokio = { version = "1.21.1", features = ["full"] }
bytes = "1.2.1"
thiserror = "1.0.36"
anyhow = "1.0.65"
log = "0.4.17"
env_logger = "0.9.1"
sled = "0.34.7"
toml = "0.5.9"

[build-dependencies]
prost-build = "0.11.1"
